# comp2811

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  CSVReader.cpp  README.md  _typos.toml  compliancedashboard.cpp  compliancedashboard.hpp  dashboard.cpp  dashboard.hpp  data.cpp  data.hpp  dataset.cpp  dataset.hpp  flake.nix  hello.cpp  litter.cpp  main.cpp  mainwindow.cpp  mainwindow.h  model.cpp  model.hpp  oldmakefile.txt  pollutantoverview.cpp  pollutants.cpp  pollutants.hpp  practice.cpp  sample.hpp  stats.cpp  stats.hpp  waterqaltool_en.qm  waterqaltool_en.ts  waterqaltool_fr.qm  waterqaltool_fr.ts  window.cpp  window.hpp  window1.cpp  window1.h  window2.h
.github/workflows/: ci.yaml
compilation/comp2811/: .gitignore  CMakeLists.txt  flake.nix
compilation/comp2811/src/: main.cpp  window.cpp  window.hpp
compilation/comp2811/src/data/: dataset.hpp
compilation/comp2811/src/pages/: dashboard.cpp  dashboard.hpp  litter.cpp  litter.hpp  pollutants.cpp  (+5 more)
fluorinated/temp/: dataset.cpp  dataset.hpp  flake.nix  window.cpp  window.hpp
iteration1/comp2811/: CMakeLists.txt
iteration1/comp2811/src/: window.cpp  window.hpp
solution/data/: 1.0_day.csv  1.0_month.csv  1.0_week.csv  2.5_day.csv  2.5_hour.csv  2.5_month.csv  2.5_week.csv  4.5_day.csv  4.5_month.csv  4.5_week.csv  README.md  all_hour.csv  all_month.csv  all_week.csv  significant_month.csv  significant_week.csv
src/: dataset.hpp  main.cpp  model.cpp  model.hpp  window.cpp  window.hpp
src/data/: dataset.cpp  dataset.hpp  model.cpp  model.hpp  sample.hpp
src/pages/: card.cpp  card.hpp  compliance.cpp  compliance.hpp  dashboard.cpp  dashboard.hpp  flourinated.cpp  flourinated.hpp  fluorinated.cpp  fluorinated.hpp  litter.cpp  litter.hpp  pollutants.cpp  pollutants.hpp  pops.cpp  pops.hpp  timeseries.cpp  timeseries.hpp
temp/: CMakeLists.txt  model.cpp  model.hpp  sample.hpp  window.cpp
(+8 files in other folders)
